--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Permanent+Marker&display=swap');
+
 /*General styles*/
 html {
-  background: #dfe1ee;
-  color: #fff;
+  background: #fff;
+  color:#fff;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -17,35 +21,38 @@ p {
 
 h1 {
   font-size: 20px;
-  color:#edb071;
 }
 
 h2 {
   font-size: 17px;
+  color: #87574b;
 }
 
 button {
-  background-color: #3d6d79;
+  background-color: rgba(255, 255, 255, 0.838);
   border: none;
-  padding: 10px;
+  padding: 12px;
   margin-top: 15px;
-  color: #fff;
+  color:#eaa561;
   font-size: 15px;
   border-radius: 50%;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  box-shadow: 10px 5px 5px #edb071;
+  box-shadow: 8px 3px 3px #e2a05e;
 }
 
 button:hover {
-  background-color: #87574b;
+  background-color: #fff;
+  cursor: pointer;
 }
 
 /*Header*/
 .flex-container-site-header {
   display: flex;
-  background-color: #3d6d79;
+  background-color: rgba(228, 228, 228, 0.838);
   align-items: center; 
   justify-content:space-between;
+  box-sizing: border-box;
+  border-bottom: #e7b687 5px solid;
 }
 
 .logo {
@@ -57,27 +64,40 @@ button:hover {
 
 .logo h1 {
   font-size: 30px;
+  font-family: 'Permanent Marker', cursive;
   margin: 2px 0px 2px 0px;
+  color: black;
 }
 
 .logo h2 {
-  margin-top: 2px;
+  margin-top: 0px;
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+  color: #363636;
 }
 
 .logo img {
-  max-height: 80px;
-  /*background-color:#e7b687;*/
+  max-height: 60px;
+  background-color:#e7b687;
   border-radius: 30%;
+  cursor:pointer;
 }
 
-.navbar {
-  margin-right: 50px;
+ul {
   display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
-.nav-button {
-  height: 40px; 
-  width: 40px;
+.navbar, a {
+  list-style: none;
+  text-decoration: none;
+  padding-right: 20px;
+  font-size: 10px;
+  color: #eaa561;
+}
+
+a:hover {
+  color: white;
 }
 
 /*Big news*/
@@ -88,8 +108,9 @@ button:hover {
 }
 
 .big-news-item {
-  background-color:#649cae;
+  background-color:rgb(95, 91, 91);
   grid-row: span 3;
+  color:#fff
 }
 
 .big-news-item img {
@@ -111,25 +132,26 @@ button:hover {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 5px;
+  border-top: 7px solid #e7b687;
   }
 
 .flex-child-news {
   width: 100%;
-  background-color: #649cae;
+  background-color: rgba(106, 106, 106, 0.488);
+  border-radius: 3px;
   display:flex;
   flex-direction: row;
   align-content:space-around;
   align-items: center;
-  
 }
 
 .flex-child-news-img {
-  padding: 20px; 
+  padding: 20px;
 }
 
 .flex-child-news img {
-  max-height: 280px;
-  
+  max-height:280px;
+  border: #e2a05e outset 5px;
 }
  
 .flex-child-news-text {
@@ -137,9 +159,14 @@ button:hover {
   padding: 15px;
   flex-direction: column;
 }
-
+.flex-child-news-text h1 {
+  margin: 0px;
+}
 .flex-child-news-text p {
-  align-self:flex-start;
+  margin: 10px 0px 0px 0px;
+}
+.flex-child-news-text button {
+  align-self:flex-end;
 }
 
 /*iPad*/
@@ -149,7 +176,7 @@ button:hover {
   }
   
   .logo img {
-    max-height: 90px;
+    max-height: 70px;
   }
   
   .logo h1 {
@@ -159,10 +186,10 @@ button:hover {
   .logo h2 {
     font-size: 20px;
   }
-  
-  .nav-button {
-    height: 50px; 
-    width: 50px;
+
+  .navbar, a {
+    padding-right: 20px;
+    font-size: 13px;
   }
 
   .big-news-grid {
@@ -194,18 +221,27 @@ button:hover {
     flex-grow: 1;
     display:flex;
     flex-direction: column;
+    align-items:center;
     }
 
   .flex-child-news img {
     max-width: 250px;
     }
+    
+  .flex-child-news-img {
+    padding: 20px 10px 20px 10px;
+    }
   
   .flex-child-news-text {
     display: flex;
-    padding: 15px;
+    padding: 0px 50px 20px 50px;
     flex-direction: column;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
+  
+  /*.flex-child-news-text button {
+    align-self: flex-end;
+    }*/
     }
  
 /*Desktop*/
@@ -214,6 +250,7 @@ button:hover {
     display: flex;
     flex-direction: row;
     align-items:flex-end;
+    align-content: center;
   }
 
   .flex-item-header headline {
@@ -223,15 +260,26 @@ button:hover {
   }
   
   .logo img {
-    max-height: 120px;
+    max-height: 150px;
+    align-self: center;
   }
   
   .logo h1 {
     font-size: 43px;
+    padding-left: 20px;
   }
   
   .logo h2 {
     font-size: 18px;
+    padding-left: 20px;
+  }
+
+  ul {
+    flex-direction: row;
+  }
+  
+  .navbar, a {
+    font-size: 14px;
   }
   
   .big-news-grid {
@@ -264,6 +312,10 @@ button:hover {
     flex-direction: column;
     flex-grow: 1;
     }
+  
+  .flex-child-news-text {
+    padding: 20px;
+  }
 
   .flex-child-news img {
     max-width: 200px;
