Removes borders from big-news section

--- a/code/style.css
+++ b/code/style.css
@@ -106,11 +106,10 @@ header img {
 /** Big news section **/
 
 .big-news {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
   background-color: white;
   display: flex;
   flex-flow: column;
-  border-top: #948981 1px solid;
-  border-bottom: #948981 1px solid;
   padding-bottom: 20px;
 }
 
