--- a/code/style.css
+++ b/code/style.css
@@ -174,6 +174,7 @@ header img {
 }
 
 .other-news-container a:hover {
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 25%), 0 6px 20px 0 rgb(0 0 0 / 15%);
   transform: translateY(-10px);
   transition: transform ease-in-out 300ms;
 }
