update for the bigger media queries with grid

--- a/code/style.css
+++ b/code/style.css
@@ -139,7 +139,7 @@ h3 {
 @media (min-width: 668px ) and (max-width:1024px) {
 
   body {
-  background-color: rgb(234, 56, 56);
+  background-color: rgb(255, 255, 255);
   }
   
   header {
@@ -186,6 +186,7 @@ h3 {
   
   h2 {
     font-size: 24px;
+    margin: 0px 0px 10px 0px;
   }
   p {
     font-size: 18px;
@@ -227,19 +228,21 @@ h3 {
   
   .other-news {
     background: white;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     padding: 20px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
    }
    
    .other-news img {
+    grid-column: span 2;
      max-width: 100%;
      height: auto;
    }  
 
-   .text-box {
+   .other-news .text-box {
+    grid-column: span 2;
     display: flex;
     flex-direction: column;
     padding-top: 10px;
@@ -251,11 +254,110 @@ h3 {
   body {
     background-color: rgb(238, 255, 0);
   }
+  header {
+    background-color: white;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+  
+   h1 {
+    font-style: oblique;
+    font-size: 50px;
+    margin-bottom: -10px;
+    display: flex;
+    }
+  
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: flex-end;
+   
+    }
+    li {
+      float: left;
+    }
+    
+    a {
+      display: block;
+      padding: 8px;
+      background-color: white;
+      margin: 5px;
+      text-decoration: none;
+      color: rgb(56, 56, 56);
+      font-size: 14px;
+    }
+  
+    .navbar a:hover {
+      color: grey;
+  }
+  
+  h2 {
+    font-size: 24px;
+    margin: 0px 0px 10px 0px;
+  }
+  p {
+    font-size: 18px;
+    margin-top: 0px;
+  }
+  h3 {
+    font-size: 20px;
+    margin-top: 0px;
+  }
+  
   .news-items {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-  }
+    gap: 10px;
+    }
+  
   .big-news {
     grid-column: span 4;
+    background-color: white;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    gap: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow:rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   }
+
+  .big-news img {
+    grid-column: span 2;
+    max-width: 100%;
+    border-radius: 5px;
+  }
+
+  .big-news .text-box {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .other-news {
+    background: white;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+   }
+   
+   .other-news img {
+    grid-column: span 2;
+     max-width: 100%;
+     height: auto;
+   }  
+
+   .other-news .text-box {
+    grid-column: span 2;
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+  }
+
 }
