--- a/code/style.css
+++ b/code/style.css
@@ -15,7 +15,7 @@ body {
     }
   
    h1 {
-      font-style: oblique;
+      font-style: italic;
       font-size: 40px;
       padding-left: 20px;
       margin-bottom: 5px;
@@ -152,7 +152,7 @@ h3 {
     }
   
    h1 {
-    font-style: oblique;
+    font-style: italic;
     font-size: 50px;
     margin-bottom: -10px;
     display: flex;
@@ -264,7 +264,7 @@ h3 {
     }
   
    h1 {
-    font-style: oblique;
+    font-style: italic;
     font-size: 50px;
     margin-bottom: -10px;
     display: flex;
@@ -285,14 +285,13 @@ h3 {
     a {
       display: block;
       padding: 8px;
-      background-color: white;
       margin: 5px;
       text-decoration: none;
       color: rgb(56, 56, 56);
       font-size: 14px;
     }
   
-    .navbar a:hover {
+    a:hover {
       color: grey;
   }
   
@@ -360,4 +359,30 @@ h3 {
     padding-top: 10px;
   }
 
+  .text-box a{
+    padding: 0px;
+    margin:0px;
+  }
+
+  .button {
+    background-color: rgb(249 218 218);
+    border-radius: 40px;
+    width: 93px;
+    height: 35px;
+    padding: 10px;
+    margin-top: 60px;
+  }
+
+  .button:hover  {
+    background-color: #f57272;
+    color: white;
+    }
+  .button a{
+    padding: 5px;
+    margin: 0px;
+    color:black;
+  }
+  .button a:hover{
+    color: white;
+  }
 }
