added @media for small phones

--- a/code/style.css
+++ b/code/style.css
@@ -329,3 +329,9 @@ a:hover {
     max-width: 200px;
     }
   }
+  
+  @media (max-width: 400px) {
+    .flex-child-news img {
+      max-width: 130px;
+    }
+  }
