--- a/code/style.css
+++ b/code/style.css
@@ -33,8 +33,10 @@ img {
 
 
 h1 {
+    text-shadow: 2px 2px 5px rgb(87, 184, 111);
     color: rgb(116, 159, 128);
     font-size: 85px;
+    font-family: Copperplate, Papyrus, fantasy;
 
 }
 
@@ -59,7 +61,7 @@ a:link {
 
 
 a {
-    color: rgb(31, 167, 158) !important;
+    color: rgb(11, 93, 87) !important;
 }
 
 .logo-hidden {
@@ -100,7 +102,6 @@ img {
 
 }
 
-
 .big-news{
     margin: 5px;
     padding-left: 20px;
@@ -127,11 +128,13 @@ p{
     text-align: center;
 }
 
-
 .heading-box {
     padding: 30px;
 }
 
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .green {
     background: rgb(77, 123, 9);
@@ -159,37 +162,6 @@ p{
     }
 
 
-    /* mobile */
-  @media (max-width: 668px) {
-
-     body {
-        display: inline-block;
-        margin: 33%;
-        margin-top: -45px;
-    }
-
-     .navbar {
-       justify-content: space-between;
-
-  }
-
-
-     .after-heading{
-         display: inline;
-         margin-left: 50%;
-         margin-bottom: 50%;
-         width: 300px;
-         height: 300px;
-
-}
-
-     .site-magazine{
-        grid-template-columns: 100%;
-
-}
-
-}
-
     /* Tablet */
 @media (min-width: 668px) and (max-width: 1024px) {
 
@@ -212,8 +184,6 @@ p{
 
     .logoandtext{
        margin-left: 70%;
-
-
   }
 
      .navbar {
@@ -224,7 +194,6 @@ p{
        width: 700px;
 
   }
-
 
      .after-heading{
          display: inline-block;
@@ -245,6 +214,37 @@ p{
 
 
 }
+
+    /* mobile */
+    @media (max-width: 668px) {
+
+        body {
+           display: inline-block;
+           margin: 33%;
+           margin-top: -45px;
+       }
+   
+        .navbar {
+          justify-content: space-between;
+   
+     }
+   
+   
+        .after-heading{
+            display: inline;
+            margin-left: 50%;
+            margin-bottom: 50%;
+            width: 300px;
+            height: 300px;
+   
+   }
+   
+        .site-magazine{
+           grid-template-columns: 100%;
+   
+   }
+   
+   }
 
 
 
