--- a/new code/style.css
+++ b/new code/style.css
@@ -1,8 +1,4 @@
 /* generic nav-bar section */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&family=Space+Mono&display=swap");
-
-/* background-image: url("https://images.unsplash.com/photo-1516105442523-f6e1d7888852?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NTkzNzQ2NTM&ixlib=rb-1.2.1&q=80"); */
-
 header {
   display: flex;
   align-items: center;
@@ -83,26 +79,45 @@ header ul li a:hover {
   font-weight: bold;
 }
 
+.subscribe:hover {
+  transition: 0.3s;
+}
+
 /* generic homepage grid*/
 .grid-parent {
   display: grid;
   gap: 10px;
 }
 
-.grid-item .big-grid-item {
-  display: flex;
-}
-
 .grid-item {
   color: rgba(245, 242, 245, 0.635);
+}
+
+.grid-item.big-grid-item {
+  background: black;
+}
+
+.big-grid-item {
+  display: flex;
 }
 
 .big-grid-item img {
   height: 100%;
 }
 
-.grid-item.big-grid-item {
-  background: black;
+.read-more {
+  border: none;
+  background: #ea1538;
+  color: white;
+  font-weight: bold;
+}
+
+.read-more:hover {
+  transition: 0.3s;
+}
+
+.main-news h1 {
+  font-size: 30px;
 }
 
 /* generic articles */
@@ -113,6 +128,7 @@ header ul li a:hover {
   height: 100%;
   overflow: auto;
   text-align: center;
+  margin: 10px 20px;
 }
 
 .news h2 {
@@ -166,16 +182,6 @@ p::first-letter {
     padding: 12px 20px;
     border-radius: 30px;
     font-size: 15px;
-    border: none;
-    background: #ea1538;
-    color: white;
-    font-weight: bold;
-  }
-
-  .subscribe :hover {
-    transform: scale(1.3);
-    cursor: pointer;
-    transition: 0.4s;
   }
 
   /* mobile-phone home page grid */
@@ -183,6 +189,18 @@ p::first-letter {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 250px;
     grid-auto-rows: 280px;
+  }
+
+  /* mobile-phone big-grid section */
+
+  .read-more {
+    padding: 12px 20px;
+    border-radius: 30px;
+    font-size: 15px;
+  }
+
+  .main-news {
+    display: none;
   }
 }
 
@@ -208,17 +226,8 @@ p::first-letter {
     padding: 12px 30px;
     border-radius: 30px;
     font-size: 15px;
-    border: none;
-    background: #ea1538;
-    color: white;
-    font-weight: bold;
   }
 
-  button :hover {
-    transform: scale(1.3);
-    cursor: pointer;
-    transition: 0.4s;
-  }
   /* tablet section grid*/
   .grid-parent {
     grid-template-columns: repeat(2, 1fr);
@@ -229,6 +238,25 @@ p::first-letter {
   .big-grid-item {
     grid-column: span 2;
   }
+}
+
+/* tablet section big grid*/
+.juicy {
+  float: left;
+}
+
+.main-news {
+  float: right;
+  flex-direction: column;
+  overflow: auto;
+  text-align: center;
+  margin-right: 20px;
+}
+
+.read-more {
+  padding: 12px 30px;
+  border-radius: 30px;
+  font-size: 15px;
 }
 
 /* computer section*/
@@ -283,4 +311,29 @@ p::first-letter {
   .big-grid-item {
     grid-column: span 4;
   }
+}
+
+/* computer section big grid*/
+.juicy {
+  float: left;
+}
+
+.main-news {
+  float: right;
+  flex-direction: column;
+  overflow: auto;
+  text-align: center;
+  margin-right: 20px;
+}
+
+.read-more {
+  padding: 12px 30px;
+  border-radius: 30px;
+  font-size: 15px;
+}
+
+.read-more:hover {
+  transform: scale(1.3);
+  cursor: pointer;
+  transition: 0.4s;
 }
