--- a/code/style.css
+++ b/code/style.css
@@ -69,13 +69,13 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #888a89;
+  background-color: rgb(136, 138, 137);
 }
 
 
 .container {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: rgb(242, 242, 242);
   padding: 50px 20px 20px 20px;
 }
 
@@ -132,6 +132,7 @@ input[type=submit]:hover {
 
 .footer {
   display: block;
+  height: 100px;
   background: rgb(255, 255, 255);
   padding: 15px;
   font-size: .8em;
