--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,247 @@
-html {
-  background: #0025ff;
-  color: #fff;
+.navbar {
+  width: 100%;
+  background-color: 00;
+  overflow: auto 
+}
+
+/* Navbar link styling */
+.navbar a {
+  float: right;
+  text-align: center;
+  padding: 25px;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: sans-serif;
+  
+}
+
+/* Navbar effects */
+.navbar a:hover {
+  background-color: #ffffff99;
+  color: #876e91;
+}
+
+/* Current/active navbar link */
+.active {
+  background-color: #876e91E6;
+}
+
+/* Responsive navbar, compact screen less than 667*/
+@media screen and (max-width: 667px) {
+  .navbar a {
+    float: none;
+    display: block;
+  }
+
+ .logo {
+    display: block; 
+    margin: 0 auto; 
+    padding: 10px;
+    float: none; 
+ }
+  }
+
+
+/*  Background */
+body {
+  background-image: url(https://images.unsplash.com/photo-1655083974309-6e03a3966021?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NTY4NTY1MDU&ixlib=rb-1.2.1&q=80);
+  background-position: center;
+  background-repeat: no-repeat; 
+  background-size: cover;
+  margin: 5px;
+  }
+
+
+/* text styling */
+h1 {
+  color: #2f2a32;
+  font-family:'newsreader', sans-serif;
+  font-size: 70px;
+  font-stretch: ultra-condensed;
+  padding-top: 50px;
+
+  }
+  
+  .h1 :hover {
+    background-color: 00;
+    color:#ffffff;
+  }
+  
+h2 {
+  color: #221d25;
+  font-family:'newsreader', sans-serif;
+  font-size: 50px;
+  font-stretch: ultra-condensed;
+  font-style: italic; 
+  padding: 20px;
+  padding-bottom: 70px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+h4 {
+  text-align: center; 
+  padding: 10px; 
+  font-size: 20px;
+}
+
+.top-news {
+text-align: center; 
+padding: 10px; 
+}
+
+p {
+  margin: 10px;
+  padding: 10px;
+  text-align: justify;
+
+}
+
+
+.logo-style :hover{
+  transform: translateY(-10px);
+}
+
+
+/* News article main news */
+.container-head-news {
+  display: column; 
+  background-color: white; 
+  width: auto;
+  text-align: center;
+  justify-content: center;
+  padding-top: 30px
+}
+
+/*-----Top-Imagefit-----*/
+
+.fit { 
+width: 325px;
+height: 325px;
+}
+
+.container-head-news :hover {
+color: #876e91;
+}
+
+
+/* News article small news*/
+.news-item {
+display: grid;
+background-color: white; 
+margin: 20px;
+height: 550px;
+width: auto; 
+padding-top: 20px;
+padding-bottom: 50px;
+justify-items: center;
+} 
+
+.news-item :hover {
+color:#876e91;
+}
+
+/* -------   RESPONSIVE TABLET  ---------  */ 
+
+@media (min-width: 768px) and (max-width: 1080px) {
+
+.body {
+margin: 20px;
+}
+
+.grid{
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: (4, 100px);
+}
+
+
+.fit {
+float: left; 
+padding: 40px; 
+width: 350px;
+height: 350px;
+}
+
+.top-news {
+    float: center;
+    justify-items: center;
+    padding-left: 200px;
+    padding-top: 40px;
+  }
+
+.container-head-news {
+height: 450px;
+width: auto; 
+}
+
+.news-item {
+justify-items: center;
+margin-top: 40px;
+
+}
+
+.fit-articleimage {
+padding-top: 20px;
+}
+}
+
+/*  ------ RESPONSIVE DESKTOP ---------  */
+
+@media (min-width: 1100px) and (max-width: 1920px){ 
+.body {
+  margin: 20px;
+}
+
+.grid{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: (2, 100px);
+}
+.fit {
+  float: left; 
+  padding: 40px; 
+  width: 500px;
+  height: 500px;
+}
+
+h3 {
+font-size: 50px;
+}
+
+h4 {
+font-size: 20px;
+}
+.top-news {
+  float: center;
+  margin: 90px; 
+  padding-left: 550px; 
+  padding-right: 100px;
+}
+
+.container-head-news {
+  height: 600px;
+  padding: 40px;
+  width: auto; 
+}
+
+.news-item {
+  justify-items: center;
+  margin-top: 40px;
+  padding-top: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 50px;
+}
+}
+
+.footer {
+  position: bottom;
+  width: 100%;
+  text-align: center;
 }
